[package]
name = "cyclog"
version = "0.1.0"
authors = ["Timmy Douglas <timmy@timmyd.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog-json = { version ="2.3.0" }
slog = { version = "2.3.0" }
slog-async = { version = "2.3.0" }